2011-01-09  Dirk Schulze  <krit@webkit.org>

        Reviewed by Rob Buis.

        Move MathML renderer to rendering/mathml
        https://bugs.webkit.org/show_bug.cgi?id=52131

        Move all renderer of MathML to WebCore/rendering/mathml

        No change of functionality, no new tests added.

        * CMakeLists.txt:
        * GNUmakefile.am:
        * WebCore.gypi:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * mathml/RenderMathMLBlock.cpp: Removed.
        * mathml/RenderMathMLBlock.h: Removed.
        * mathml/RenderMathMLFenced.cpp: Removed.
        * mathml/RenderMathMLFenced.h: Removed.
        * mathml/RenderMathMLFraction.cpp: Removed.
        * mathml/RenderMathMLFraction.h: Removed.
        * mathml/RenderMathMLMath.cpp: Removed.
        * mathml/RenderMathMLMath.h: Removed.
        * mathml/RenderMathMLOperator.cpp: Removed.
        * mathml/RenderMathMLOperator.h: Removed.
        * mathml/RenderMathMLRoot.cpp: Removed.
        * mathml/RenderMathMLRoot.h: Removed.
        * mathml/RenderMathMLRow.cpp: Removed.
        * mathml/RenderMathMLRow.h: Removed.
        * mathml/RenderMathMLSquareRoot.cpp: Removed.
        * mathml/RenderMathMLSquareRoot.h: Removed.
        * mathml/RenderMathMLSubSup.cpp: Removed.
        * mathml/RenderMathMLSubSup.h: Removed.
        * mathml/RenderMathMLUnderOver.cpp: Removed.
        * mathml/RenderMathMLUnderOver.h: Removed.
        * rendering/mathml: Added.
        * rendering/mathml/RenderMathMLBlock.cpp: Copied from Source/WebCore/mathml/RenderMathMLBlock.cpp.
        * rendering/mathml/RenderMathMLBlock.h: Copied from Source/WebCore/mathml/RenderMathMLBlock.h.
        * rendering/mathml/RenderMathMLFenced.cpp: Copied from Source/WebCore/mathml/RenderMathMLFenced.cpp.
        * rendering/mathml/RenderMathMLFenced.h: Copied from Source/WebCore/mathml/RenderMathMLFenced.h.